# DiracData

./: .env.example  .gitignore  AGENT.md  README.md
v1/: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
v1/docs/: agent_harness_eval_roadmap.md  analyst_compiler_agent_harness.md  architecture.md  business_grounding_layer.md  context_graph_and_uat_phases.md  epistemic_sql_compiler.md  implementation_plan.md  learning_module.md  low_level_design.md  mvp_scope.md  nl2sql_eval_harness_design.md  product.md  react_middleware_agent_harness.md  schema_search_and_profiling.md  test_harness_and_evals.md
v1/scripts/: generate_fintech_query_history.py  generate_fintech_schema_parquet.py  generate_retail_analytics_parquet.py  generate_retail_analytics_query_history.py  generate_tpcds_parquet.py  generate_tpcds_query_history.py  inspect_learning_artifacts.py  publish_business_grounding.py  run_analyst_compiler_uat.py  run_data_analyst_agent_uat.py  run_data_analyst_uat_suite.py  run_embedding_build.py  run_join_discovery_uat.py  run_learning_pipeline.py  run_learning_uat.py  smoke_bedrock_models.py  smoke_gemini_models.py  smoke_learning_flow.py  smoke_object_store.py  smoke_openai_models.py  smoke_tpcds_duckdb.py  smoke_tpcds_duckdb_s3.py  upload_tpcds_parquet_to_lake.py
v1/tests/: README.md  test_agent_artifact_tools.py  test_agent_join_recovery.py  test_agent_settings.py  test_agent_sql_tool.py  test_agentic_learning.py  test_analyst_compiler_runtime.py  test_business_context.py  test_business_grounding.py  test_candidate_search.py  test_config_catalog.py  test_context_graph_builder.py  test_data_analyst_agent_cli_uat.py  test_data_analyst_agent_runtime.py  test_duckdb_query_engine.py  test_duckdb_runtime.py  test_embedding_builder.py  test_fintech_learning_pipeline_artifacts.py  test_fintech_live_learning_artifacts.py  test_fintech_query_history_generator.py  test_gemini_smoke.py  test_join_discovery.py  test_learning_cli.py  test_learning_collector.py  (+18 more)
v2/: AGENT.md  README.md  pyproject.toml
(+216 files in other folders)
