[project]
name = "diracdata"
version = "0.0.1"
description = "Trustworthy LangGraph-based data agents for analytics, engineering, and science teams."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DiracData Contributors" }
]
dependencies = [
  "duckdb>=1.0.0",
  "boto3>=1.34.0",
  "langchain>=1.0.0",
  "langchain-anthropic>=1.0.0",
  "langchain-aws>=1.0.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=1.0.0",
  "langgraph>=0.2.0",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "sqlglot>=25.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
retrieval = [
  "faiss-cpu>=1.8.0",
  "networkx>=3.3",
  "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diracdata"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
