[project]
name = "diracdata-v2"
version = "0.0.0"
description = "Clean-room context fabric prototype for DiracData"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langgraph>=0.2",
  "pydantic>=2",
]

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.40",
  "langchain-anthropic>=0.3",
]
bedrock = [
  "boto3>=1.34",
  "langchain-aws>=0.2",
]
openai = [
  "langchain-openai>=0.3",
  "openai>=1.0",
]
retrieval = [
  "sentence-transformers>=3",
  "torch>=2",
  "transformers>=4",
]
s3 = [
  "boto3>=1.34",
]
all = [
  "anthropic>=0.40",
  "boto3>=1.34",
  "langchain-anthropic>=0.3",
  "langchain-aws>=0.2",
  "langchain-openai>=0.3",
  "openai>=1.0",
  "sentence-transformers>=3",
  "torch>=2",
  "transformers>=4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
